--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.7'
 
+    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
+    runtime 'ch.qos.logback:logback-classic:1.1.7'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
+
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
@@ -30,6 +34,14 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
+
+clean {
+    delete "${buildDir}/classes/"
+    delete "${buildDir}/dependency-cache/"
+    delete "${buildDir}/reports/"
+    delete "${buildDir}/test-results/"
+    delete "${buildDir}/tmp/"
+}
 
 pmd {
     toolVersion = "5.0.4"
