--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,13 @@ jar {
 }
 
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
+    //search
+    compile ("org.elasticsearch:elasticsearch:2.4.4") {
+    }
+    //reduce boilerplate
     compile "org.projectlombok:lombok:1.16.14"
+
+    // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.7'
     compile 'ch.qos.logback:logback-classic:1.1.7'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
@@ -49,7 +54,6 @@ dependencies {
     )
     compile 'org.mongodb:mongo-java-driver:2.13.3'
     compile group: 'com.google.inject', name: 'guice', version: '3.0'
-
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.+"
 }
