--- a/conf/gameSettings/bj.yaml
+++ b/conf/gameSettings/bj.yaml
@@ -7,3 +7,8 @@ bjmongoDbConfiguration:
   connection: "localhost"
   port: 27017
   dbName: "GameData"
+
+elasticSearch:
+  endpoint: "localhost"
+  port: 9300
+  localPath: "/usr/local/Cellar/elasticsearch@2.4/2.4.4_1/"
